I figured out that Droid Sans was being added, but not used. So in this branch I'm trying to fix up some spacing and use Droid Sans as the first font in the stack. Using scale http://modularscale.com/scale/?px1=13&px2=16&ra1=1.5&ra2=0 as a starting point.

--- a/sass/_general_classes.sass
+++ b/sass/_general_classes.sass
@@ -1,6 +1,6 @@
 .author
   color: $meta_color
-  font-size: 0.8em
+  font-size: 0.821em
   margin-top: 0
 
 div.flash
@@ -49,6 +49,10 @@ p.subtitle
 
 .tip
   +box-shadow(rgba(0,0,0,0.5) 0 0 2em)
+
+div.wiki
+  ul, ol
+    margin: 0
 
 @import 'general_classes/modal'
 @import 'general_classes/progress'
