--- a/sass/_general_elements.sass
+++ b/sass/_general_elements.sass
@@ -1,10 +1,10 @@
 body
   background: #f0f5fe url(../images/body_noise.gif)
   color: $text_color
-  font-family: 'DejaVu Sans', helvetica, 'helvetica neue', arial, sans-serif
-  font-size: 82%
+  font-family: 'Droid Sans', helvetica, 'helvetica neue', arial, sans-serif
+  font-size: 13px
   line-height: 1.6em
-  margin: 10px
+  margin: $baseline
 
 #wrapper
   background: none
@@ -26,6 +26,8 @@ a
 ul, ol
   margin: 1em 0
   padding: 0
+ul ul, ul ol
+  margin: 0
 li
   margin-left: 1.5em
   padding: 0
@@ -33,23 +35,31 @@ li
 // Headings
 h1, h2, h3
   border: none // Redmine default override
-  font-family: 'DejaVu Sans Condensed', helvetica, 'helvetica neue', arial, sans-serif
+  font-family: 'Droid Sans', 'helvetica neue condensed', arial, sans-serif
   padding: 0
+  line-height: 1.1em
 h1
-  font-size: 1.96em
+  font-size: 1.846em
 h2, .wiki h1
-  font-size: 1.96em
-  margin-bottom: 0.4em
-  margin-top: 0
+  font-size: 1.5em
+  margin-bottom: 13px
+  margin-top: 19.5px
 h3
-  font-size: 1.4em
-  margin-bottom: 0.2em
-  margin-top: 1.2em
-
+  font-size: 1.231em
+  margin-bottom: 8.667px
+  margin-top: 19px
+p
+  margin: 1em 0
 hr
   background: none
   border: none
   border-top: 1px solid $separator_color
+
+pre
+  overflow: auto
+  padding: $baseline
+  +border-radius($outside_border_radius / 2)
+  background: adjust-lightness($text_color, 75%)
 
 #sidebar
   h2, h3
