--- a/sass/config/_settings.sass
+++ b/sass/config/_settings.sass
@@ -2,6 +2,7 @@
 $experimental-support-for-svg: true
 
 // Setup layout
+$baseline: 13px
 $spacing: 18px
 $content_width: 73%
 $outside_border_radius: 4px
